@@ -3,6 +3,11 @@ NEWS - OpenPrinting CUPS Filters v1.0.38 - 2013-09-03
 
 CHANGES IN V1.0.39
 
+	- pdftops: Fix for landscape PDF handling. Do not use the
+	  command line options "-origpagesizes" and
+	  "-choosePaperByPDFPageSize" of Poppler's pdftops utility on
+	  already processed PDF data. Thanks to Tim Waugh from Red Hat
+	  for the patch.
 	- cups-browsed: Improve the efficiency of BrowsePoll by using
           IPP notifications when possible. It falls back to the
           previous behaviour if it is not possible to use this
